DevOrg/src/objects/ACH_Public_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Email_Recipient__c</fullName>
        <label>Email Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Tracking_Date__c</fullName>
        <label>Last Tracking Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Schedul_Send_Transaction_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Schedul Send Transaction Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Create_Trans_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Create Trans Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Create_Trans_Service_Job_ID__c</fullName>
        <label>Scheduled Create Trans Service Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Send_Trans_Service_Job_ID__c</fullName>
        <label>Scheduled Send Trans Service Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Track_Trans_Service_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scheduled Track Trans Service Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scheduled_Track_Trans_Service_Job_ID__c</fullName>
        <label>Scheduled Track Trans Service Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Check__c</fullName>
        <label>Transaction Check #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACH Public Settings</label>
</CustomObject>